--- a/bms/core/templates/components/header.html
+++ b/bms/core/templates/components/header.html
@@ -8,7 +8,7 @@
       <div class="hidden md:block">
         <div class="ml-10 flex items-baseline space-x-4">
           <a href="/" class="text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-red-800">Home</a>
-          <a href="/donors/" class="text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-red-800">Donors</a>
+          <a href="{% url 'list_event' %}" class="text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-red-800">Events</a>
           <a href="/requests/" class="text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-red-800">Requests</a>
           <a href="/about/" class="text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-red-800">About</a>
           <a href="/contact/" class="text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-red-800">Contact</a>
