--- a/bms/core/templates/components/header.html
+++ b/bms/core/templates/components/header.html
@@ -56,7 +56,7 @@
       </button>
       <div id="mobile-profile-dropdown" class="hidden bg-white rounded-md shadow-lg py-1 mt-1">
         <a href="/profile/" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">My Profile</a>
-        <a href="{% url 'request' %}" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">My Requests</a>
+        <a href="{% url 'my_request' %}" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">My Requests</a>
         <a href="/profile/registrations/" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">My Event Registrations</a>
         <a href="/profile/settings/" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Settings</a>
         <a href="/logout/" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Logout</a>
