--- a/bms/core/templates/components/signup.html
+++ b/bms/core/templates/components/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="flex justify-center items-center bg-gray-100 min-h-screen ">
-    <form class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md space-y-6" method="POST" action="">
+    <form class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md space-y-6" method="post" action="">
         {% csrf_token %}
         <h2 class="text-3xl font-bold text-center text-red-600">Sign Up</h2>
 
